--- a/SRK/res/layout/base_layout.xml
+++ b/SRK/res/layout/base_layout.xml
@@ -37,11 +37,18 @@
             android:gravity="center_horizontal"
             android:orientation="vertical" >
 
+            <com.utils.CustomGifView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/loadeer"
+                android:visibility="gone" />
+
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:indeterminate="true" />
+                android:indeterminate="true"
+                android:visibility="visible" />
 
             <com.utils.CustomTextView
                 android:layout_width="wrap_content"
@@ -49,6 +56,7 @@
                 android:text="Loading..."
                 android:textColor="@color/pink"
                 android:textSize="20sp"
+                android:visibility="visible"
                 custom:fonttype="trebuchet_ms" />
         </LinearLayout>
     </RelativeLayout>
